--- a/TA-SecOnion_Hunting/default/indexes.conf
+++ b/TA-SecOnion_Hunting/default/indexes.conf
@@ -1,5 +1,5 @@
 [default]
-homePath = volume:zeek_hotwarm/$_index_name/db
+homePath = volume:seconion_hotwarm/$_index_name/db
 coldPath = volume:seconion_cold/$_index_name/colddb
 # thawedPath CANNOT contain a volume reference
 thawedPath = $SPLUNK_DB/$_index_name/thaweddb
