--- a/TA-SecOnion_Hunting/default/app.conf
+++ b/TA-SecOnion_Hunting/default/app.conf
@@ -1,11 +1,18 @@
+# Version 1.0.1
+
 [install]
 is_configured = 0
 
 [ui]
 is_visible = 1
-label = SecOnion Hunting
+label = Add-On For SecOnion Hunting
 
 [launcher]
 author = Gregory Keil
 description = This app was desgined to help analysts hunt through Security Onion logs in Splunk
 version = 1.0.0
+
+[id]
+group = Gregory Keil
+name = Add-On For SecOnion Hunting
+version = 1.0.1
